Align Java reader behavior with Rust and complete parity validation
Assisted-by: codex:gpt-6-astra